--- a/03_CSS_Cofee_Position_27_04_2023/index.html
+++ b/03_CSS_Cofee_Position_27_04_2023/index.html
@@ -16,8 +16,8 @@
       <h1>The Best Coffee Regions</h1>
     </div>
     <div class="main">
-      <ul>
-        <li>
+      <div>
+        <div>
           <h2>Brazil</h2>
           <p>
             Arabica dominates both Brazil and the world as a whole with about
@@ -31,9 +31,9 @@
           <a href="https://ru.wikipedia.org/wiki/Brazil"
             >Learn More about Brazil</a
           >
-        </li>
+        </div>
 
-        <li>
+        <div>
           <h2>Colombia</h2>
           <p>
             Colombia has a reputation as producing mild, well balanced coffee
@@ -46,9 +46,9 @@
           <a href="https://ru.wikipedia.org/wiki/Колумбия"
             >Learn More about Columbia</a
           >
-        </li>
+        </div>
 
-        <li>
+        <div>
           <h2>India</h2>
           <p>
             Indian coffee, grown mostly in southern India under monsoon rainfall
@@ -62,9 +62,12 @@
           <a href="https://ru.wikipedia.org/wiki/Индия"
             >Learn More about India</a
           >
-        </li>
+          </div>
+        </div>
 
-        <li>
+        <div>
+
+        <div>
           <h2>Ethiopia</h2>
           <p>
             Ethiopian beans can be divided into 3 categories: Longberry,
@@ -77,9 +80,9 @@
           <a href="https://ru.wikipedia.org/wiki/Ефиопия"
             >Learn More about Ethiopia</a
           >
-        </li>
+        </div>
 
-        <li>
+        <div>
           <h2>Costa Rica</h2>
           <p>
             Costa Rican coffee beans are considered among the best in the world.
@@ -89,12 +92,12 @@
             using the Clover automated French press. The finest coffee is
             typically grown at altitudes of 1200 to 1700 meters
           </p>
-          <a href="https://ru.wikipedia.org/wiki/Коста-Рика"
-            >Learn More about Costa Rica</a
-          >
-        </li>
+          <a href="https://ru.wikipedia.org/wiki/Коста-Рика">
+            Learn More about Costa-Rica
+          </a>
+        </div>
 
-        <li>
+        <div>
           <h2>Kenya</h2>
           <p>
             The acidic soil in highlands of central Kenya, just the right amount
@@ -104,11 +107,11 @@
             with notes of cocoa and high grade coffee from Kenya is one of the
             most sought-after coffees in the world.
           </p>
-          <a href="https://ru.wikipedia.org/wiki/Кения"
-            >Learn More about Kenya</a
-          >
-        </li>
-      </ul>
+          <a href="https://ru.wikipedia.org/wiki/Кения">
+            Learn More about Kenya
+          </a >
+        </div>
+      </div>
     </div>
   </body>
 </html>
