--- a/03_CSS_Cofee_Position_27_04_2023/index.html
+++ b/03_CSS_Cofee_Position_27_04_2023/index.html
@@ -16,7 +16,7 @@
       <h1>The Best Coffee Regions</h1>
     </div>
     <div class="main">
-      <div>
+      <div class="left">
         <div>
           <h2>Brazil</h2>
           <p>
@@ -65,7 +65,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="right">
 
         <div>
           <h2>Ethiopia</h2>
