--- a/03_Homework/index.html
+++ b/03_Homework/index.html
@@ -15,6 +15,43 @@
             <h1>The Best Coffee Regions</h1>
         </div>
         <div class="main">
+            <div class="center">
+                <div>
+                    <!-- list item (элемент списка) -->
+                    <h2>India</h2>
+                    <p>
+                        Indian coffee, grown mostly in southern India under
+                        monsoon rainfall conditions, is also termed as Indian
+                        monsooned coffee". Its flavor is defined as: "At its
+                        best similar to the flavor characteristics of Pacific
+                        coffees, but at its worst bland and uninspiring. The two
+                        well known species of coffee grown are the Arabica and
+                        Robusta. Probably the most commonly planted Arabica in
+                        India and Southeast Asia is S.795.
+                    </p>
+                    <a
+                        href="https://ru.wikipedia.org/wiki/Индия"
+                        >Learn More about India</a
+                    >
+                </div>
+                <div>
+                    <!-- list item (элемент списка) -->
+                    <h2>Kenya</h2>
+                    <p>
+                        The acidic soil in highlands of central Kenya, just the
+                        right amount of sunlight and rainfall provide excellent
+                        conditions for growing coffee plants. Coffee from Kenya
+                        is of the 'Colombia mild' type, and is well known for
+                        its intense flavor, full body, and pleasant aroma with
+                        notes of cocoa and high grade coffee from Kenya is one
+                        of the most sought-after coffees in the world.
+                    </p>
+                    <a
+                        href="https://ru.wikipedia.org/wiki/Кения"
+                        >Learn More about Kenya</a
+                    >
+                </div>
+            </div>
             <div class="left">
                 <div>
                     <h2>Brazil</h2>
@@ -29,7 +66,7 @@
                         coffee is robusta.
                     </p>
                     <a
-                        href="https://ru.wikipedia.org/wiki/%D0%91%D1%80%D0%B0%D0%B7%D0%B8%D0%BB%D0%B8%D1%8F"
+                        href="https://ru.wikipedia.org/wiki/Brazil"
                         >Learn More about Brazil</a
                     >
                 </div>
@@ -47,28 +84,11 @@
                         growing axis region.
                     </p>
                     <a
-                        href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BB%D1%83%D0%BC%D0%B1%D0%B8%D1%8F"
+                        href="https://ru.wikipedia.org/wiki/Колумбия"
                         >Learn More about Colombia</a
                     >
                 </div>
-                <div>
-                    <!-- list item (элемент списка) -->
-                    <h2>India</h2>
-                    <p>
-                        Indian coffee, grown mostly in southern India under
-                        monsoon rainfall conditions, is also termed as Indian
-                        monsooned coffee". Its flavor is defined as: "At its
-                        best similar to the flavor characteristics of Pacific
-                        coffees, but at its worst bland and uninspiring. The two
-                        well known species of coffee grown are the Arabica and
-                        Robusta. Probably the most commonly planted Arabica in
-                        India and Southeast Asia is S.795.
-                    </p>
-                    <a
-                        href="https://ru.wikipedia.org/wiki/%D0%98%D0%BD%D0%B4%D0%B8%D1%8F"
-                        >Learn More about India</a
-                    >
-                </div>
+                
             </div>
             <div class="right">
                 <div>
@@ -85,7 +105,7 @@
                         and citrus notes.
                     </p>
                     <a
-                        href="https://ru.wikipedia.org/wiki/%D0%AD%D1%84%D0%B8%D0%BE%D0%BF%D0%B8%D1%8F"
+                        href="https://ru.wikipedia.org/wiki/Ефиопия"
                         >Learn More about Ethiopia</a
                     >
                 </div>
@@ -103,25 +123,8 @@
                         meters.
                     </p>
                     <a
-                        href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D1%81%D1%82%D0%B0-%D0%A0%D0%B8%D0%BA%D0%B0"
+                        href="https://ru.wikipedia.org/wiki/Коста-Рика"
                         >Learn More about Costa-Rica</a
-                    >
-                </div>
-                <div>
-                    <!-- list item (элемент списка) -->
-                    <h2>Kenya</h2>
-                    <p>
-                        The acidic soil in highlands of central Kenya, just the
-                        right amount of sunlight and rainfall provide excellent
-                        conditions for growing coffee plants. Coffee from Kenya
-                        is of the 'Colombia mild' type, and is well known for
-                        its intense flavor, full body, and pleasant aroma with
-                        notes of cocoa and high grade coffee from Kenya is one
-                        of the most sought-after coffees in the world.
-                    </p>
-                    <a
-                        href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B5%D0%BD%D0%B8%D1%8F"
-                        >Learn More about Kenya</a
                     >
                 </div>
             </div>
