--- a/04_CSS_Flex_Practice_28_04_2023/index.html
+++ b/04_CSS_Flex_Practice_28_04_2023/index.html
@@ -32,9 +32,9 @@
         <img src="./images/Image20230428121342.jpg" alt="friend4" />
         <img src="./images/Image20230428121344.jpg" alt="friend5" />
         <img src="./images/Image20230428121348.jpg" alt="friend6" />
-        <img src="./images/Image20230428121351.jpg" alt="friend7" />
+        <img class="bottomleft" src="./images/Image20230428121351.jpg" alt="friend7" />
         <img src="./images/Image20230428121407.jpg" alt="friend8" />
-        <img src="./images/Image20230428121410.jpg" alt="friend9" />
+        <img class="bottoright" src="./images/Image20230428121410.jpg" alt="friend9" />
       </section>
       <p class="galaxy">
         It is a period of civil war. Rebel spaceships, striking from a hidden
@@ -47,5 +47,10 @@
         galaxy….
       </p>
     </main>
+    <footer>
+      <div class="button commonButton">
+        <p>Send me an <span class="email">email</span></p>
+      </div>
+    </footer>
   </body>
 </html>
