--- a/05_Homework_Form/index.html
+++ b/05_Homework_Form/index.html
@@ -1,50 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Checking pay</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>Check you pay</h2>
     <form action="#">
-        <label for="name">Name:<span>*</span></label>
-        <input type="text" id="name" required placeholder="Enter you name">
-    
-        <label for="email">Email:<span>*</span></label>
-        <input type="email" id="email" required placeholder="Enter you email">
+      <label for="name">Name:<span>*</span></label>
+      <input type="text" id="name" required placeholder="Enter you name" />
 
-        <label for="birthdate">Birthdate:<span>*</span></label>
-        <input type="date" id="birthdate" required placeholder="Enter you date of birthday">
+      <label for="email">Email:<span>*</span></label>
+      <input type="email" id="email" required placeholder="Enter you email" />
 
-        <label for="Tell">Tel:<span>*</span></label>
-        <input type="tel" id="tel" required placeholder="You number phone" pattern="+[380]{1}-[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
-        <small>Format: +380 66 777 66 55</small>
+      <label for="birthdate">Birthdate:<span>*</span></label>
+      <input
+        type="date"
+        id="birthdate"
+        required
+        placeholder="Enter you date of birthday"
+      />
 
-        <label for="password">Password:<span>*</span></label>
-        <input type="password" id="password" minlength="8" required placeholder="Min.8 chars">
+      <label for="Tell">Tel:<span>*</span></label>
+      <input
+        type="tel"
+        id="tel"
+        required
+        placeholder="You number phone"
+        pattern="+[380]{1}-[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+      />
+      <small>Format: +380 66 777 66 55</small>
 
-        <label for="gender">Gender:<span>*</span></label>
-        <select name="gender" id="gender" required>
-            <option value=""></option>
-            <option value="Male">Male</option>
-            <option value="Female">Female</option>
-            <option value="Other">I don`t know</option>
-        </select>
+      <label for="password">Password:<span>*</span></label>
+      <input
+        type="password"
+        id="password"
+        minlength="8"
+        required
+        placeholder="Min.8 chars"
+      />
 
-            <label for="avatar">Check</label>
-            <input type="file" name="avatar" id="avatar">
+      <label for="gender">Gender:<span>*</span></label>
+      <select name="gender" id="gender" required>
+        <option value=""></option>
+        <option value="Male">Male</option>
+        <option value="Female">Female</option>
+        <option value="Other">I don`t know</option>
+      </select>
 
-            <label for="feadback">Call?</label>
-            <input type="checkbox" id="feadback" name="feadback" value="yes">
+      <label for="avatar">Check</label>
+      <input type="file" name="avatar" id="avatar" />
 
-        <label for="comment">Comment:</label>
-        <textarea name="comment" id="comment"  rows="2" placeholder="You comment not a necessarily"></textarea>
+      <label for="feadback">Call?</label>
+      <input type="checkbox" id="feadback" name="feadback" value="yes" />
 
-        <input type="submit" value="Submit" id="submit">
-        <input type="reset" value="Reset" id="reset">
+      <label for="comment">Comment:</label>
+      <textarea
+        name="comment"
+        id="comment"
+        rows="2"
+        placeholder="You comment not a necessarily"
+      ></textarea>
+
+      <input type="submit" value="Submit" id="submit" />
+      <input type="reset" value="Reset" id="reset" />
     </form>
-</body>
+  </body>
 </html>
