--- a/05_Homework_Form/index.html
+++ b/05_Homework_Form/index.html
@@ -24,7 +24,7 @@
         placeholder="Enter you date of birthday"
       />
 
-      <label for="Tell">Tel:<span>*</span></label>
+      <label for="Tel">Tel:<span>*</span></label>
       <input
         type="tel"
         id="tel"
