--- a/06_HW_Bootstrap/index.html
+++ b/06_HW_Bootstrap/index.html
@@ -9,18 +9,13 @@
     <title>Bootstrap</title>
 </head>
 <body>
-    <div class="contatiner">
+    <div class="contatiner-fluid">
         <div class="row align-items-center">
-            <div class="red  col-sm-6 col-md-4 col-lg-4 col-xl
-            -2.4">1</div>
-            <div class="orange col-sm-6 col-md-4 col-lg-4 col-xl
-            -2.4">2</div>
-            <div class="yellow col-sm-6 col-md-4 col-lg-4 col-xl
-            -2.4">3</div>
-            <div class="green col-sm-6 col-md-6 col-lg-6 col-xl
-            -2.4">4</div>
-            <div class="blue col-sm-12 col-md-6 col-lg-6 col-xl
-            -2.4">5</div>
+            <div class="red  col-sm-6 col-md-4 col-lg-4 col-xl">1</div>
+            <div class="orange col-sm-6 col-md-4 col-lg-4 col-xl">2</div>
+            <div class="yellow col-sm-6 col-md-4 col-lg-4 col-xl">3</div>
+            <div class="green col-sm-6 col-lg-6 col-xl">4</div>
+            <div class="blue  col-md-6 col-lg-6 col-xl">5</div>
         </div>
     </div>
 </body>
