--- a/12_JS_TODO_15_05_2023/index.html
+++ b/12_JS_TODO_15_05_2023/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
-    <title>Todo list</title>
+    <title>Todo List</title>
 </head>
 <body>
     <div class="container">
