--- a/seminars/JSONPlaceHolder_Albums_17_05_2023/index.html
+++ b/seminars/JSONPlaceHolder_Albums_17_05_2023/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
     <title>JSONPlaceHolder Albums</title>
 </head>
 <body>
     <h1>JSONPlaceHolder Albums</h1>
-     
+    <div id="albumList"></div>
+    <a href="https://via.placeholder.com/600/92c952"></a>
 </body>
 </html>
