--- a/13_JS_JSONPlaceHolder_17_05_2023/index.html
+++ b/13_JS_JSONPlaceHolder_17_05_2023/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <h1>User List</h1>
-    <ul id="userList">
+    <ol id="userList">
 
-    </ul>
+    </ol>
 
     <label for="searchInput">Search:</label>
     <input type="text" id="searchInput" placeholder="Search by name">
 
-    <ul id="userList2">
+    <ol id="userList2">
         
-    </ul>
+    </ol>
 
     <div id="userDetails"></div>
 </body>
